--- a/_config.yml
+++ b/_config.yml
@@ -5,37 +5,37 @@ url: "http://example.com" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 theme:
   # Meta
-  title: Joey Kirk
-  avatar: avatar.png
+  title: Dave Sick
+  avatar: dave_sick_sm.jpg
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
 
   # Header and footer text
   header_text: >
-     <h1>Designer, Developer, Writer, and Dad.</h1>
+     <h1>Developer, Problem Solver, Outdoor Loer, Father and Soccer Fan.</h1>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: sick@davesick.net
   behance:
   bitbucket:
-  dribbble: "joeykirk"
-  facebook: "joeykirk"
+  dribbble: 
+  facebook: 
   flickr:
-  github: "madebymunsters/type-theme"
+  github: "dsick"
   google_plus:
-  instagram: "joeykirk"
-  linkedin:  # Full URL
+  instagram: 
+  linkedin:  https://www.linkedin.com/in/davidsick
   pinterest:
   reddit:
   soundcloud:
   stack_exchange:  # Full URL
   steam:
   tumblr:
-  twitter: "joeykirk"
+  twitter: "dlsick"
   wordpress:
   youtube:
 
