--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,10 @@ theme:
   youtube:
 
   # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: "UA-80959581-1"
+  ga('send', 'pageview');
+
+</script>"
   disqus_shortname:
   katex: true # Enable if using math markup
 
