--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ theme:
 
   # Header and footer text
   header_text: >
-     <h1>Developer, Problem Solver, Outdoor Loer, Father and Soccer Fan.</h1>
+     <h1>Developer, Problem Solver, Outdoor Lover, Father and Soccer Fan.</h1>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
