--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "http://devportfolio.davesick.net" # the subpath of your site, e.g. /blog/
 url: "https://dsick.github.io" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
